add coming soon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Playing with shapes</title>
   <link rel="stylesheet" href="dist/css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+
   <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -61,6 +63,9 @@
           C362.3,47.3,361.2,49.3,360.9,51z"/>
       </g>
     </svg>
+  </div>
+  <div class="coming-soon">
+   coming soon
   </div>
 
 
